tests/machine/x/st/string_prefix_slice.st
| prefix s1 s2 |
prefix := 'fore'.
s1 := 'forest'.
Transcript show: ((s1 at: 0 = prefix)) printString; cr.
s2 := 'desert'.
Transcript show: ((s2 at: 0 = prefix)) printString; cr.
